Add correct url

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,6 +57,7 @@ en:
         question: 'Question'
         link: 'Link'
         user: 'User'
+        gist: 'Gist'
 
   success: 'Success'
   create_test: 'Create test'
