add validation to gist

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
       questions: 'Questions'
       action: 'Action'
       tests: 'Tests'
+      gist: 'Gist'
     test:
       start: 'Start'
 
