--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -27,6 +27,8 @@ ru:
         level: 'Уровень'
         category_id: 'Категория'
         back: 'Назад'
+      form_inline:
+        submit: 'OK'
 
       test:
         show: 'Просмотреть'
