--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -64,6 +64,7 @@ en:
 
   success: 'Success'
   create_test: 'Create test'
+  confirm: 'Are you sure?'
 
   helpers:
     submit:
@@ -73,3 +74,7 @@ en:
 
     select:
       prompt: "Select category"
+
+  feedbacks:
+    create:
+      success: 'Feedback was successfully sent'
