--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -68,6 +68,7 @@ ru:
 
   success: 'Успех'
   create_test: 'Создать тест'
+  confirm: 'Вы уверены?'
   
   activerecord:
     errors:
@@ -87,3 +88,7 @@ ru:
 
     select:
       prompt: "Выберите категорию"
+
+  feedbacks:
+    create:
+      success: 'Отзыв был успешно отправлен'
